[package]
name = "inspector-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
xlsxwriter = "0.6.0"
image = { version = "0.24", features = ["jpeg", "png"] }
native-dialog = "0.7.0"
iced = "0.12.1"